--- a/SoccerApp/package.json
+++ b/SoccerApp/package.json
@@ -1,10 +1,10 @@
 {
   "name": "soccerapp",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3013",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
